RESOLVED FIXED305647
IOSurfacePool should not mark inUse surfaces as volatile
https://bugs.webkit.org/show_bug.cgi?id=305647
Summary IOSurfacePool should not mark inUse surfaces as volatile
Mike Wyrzykowski
Reported 2026-01-16 08:52:27 PST
IOSurfacePool should not mark inUse surfaces as volatile
Attachments
Mike Wyrzykowski
Comment 1 2026-01-16 08:55:52 PST
Mike Wyrzykowski
Comment 2 2026-01-16 08:59:31 PST
EWS
Comment 3 2026-01-16 14:44:17 PST
Committed 305733@main (887ef237a726): <https://commits.webkit.org/305733@main> Reviewed commits have been landed. Closing PR #56717 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.