Cherry-pick 887ef237a726. rdar://168364194

IOSurfacePool should not mark inUse surfaces as volatile
    https://bugs.webkit.org/show_bug.cgi?id=305647
    rdar://167596824

    Reviewed by Tim Horton.

    It is incorrect to call setVolatile(true) on an IOSurface
    whose contents are currently in use, as they could be immediately
    purged by the system leaving in use contents undefined.

    Note, in use surfaces are added to m_surfaceDetails in
    IOSurfacePool::willAddSurface so before calling setVolatile(true),
    check to see if the surface is no longer in use.

    * Source/WebCore/platform/graphics/cg/IOSurfacePool.cpp:
    (WebCore::IOSurfacePool::markOlderSurfacesPurgeable):

    Canonical link: https://commits.webkit.org/305733@main

Identifier: 305413.46@safari-7624-branch